<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.UserRegistrationActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="32sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/register_yourself"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                app:errorTextColor="@color/error"
                app:startIconDrawable="@drawable/ic_mobile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/mobile_number">
                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:padding="8dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:maxLength="10"
                    android:layout_height="50dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:errorEnabled="true"
                app:errorTextColor="@color/error"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_person"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/full_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="text"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:maxLength="50"
                    android:layout_width="match_parent"
                    android:padding="8dp"
                    android:layout_height="50dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etGenderMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextColor="@color/error"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/gender">
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etDOB"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/error"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/date_of_birth">
                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="none"
                        android:focusable="false"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_width="match_parent"
                        android:padding="8dp"
                        android:layout_height="50dp" />
                </com.google.android.material.textfield.TextInputLayout>
                <ImageView
                    android:id="@+id/ivPickDate"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="2dp"
                    android:layout_gravity="center_vertical|end"
                    android:clickable="true"
                    android:src="@drawable/ic_calender"
                    android:focusable="true" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etAddress1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                app:errorTextColor="@color/error"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/address1">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:lines="3"
                    android:scrollbars="vertical"
                    android:gravity="top|start"
                    android:maxLength="50"
                    android:layout_width="match_parent"
                    android:padding="8dp"
                    android:layout_height="50dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etAddress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                app:errorTextColor="@color/error"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/address_2">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:lines="3"
                    android:scrollbars="vertical"
                    android:gravity="top|start"
                    android:maxLength="50"
                    android:layout_width="match_parent"
                    android:padding="8dp"
                    android:layout_height="50dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPincode"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_pin"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/pincode">
                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="number"
                        android:maxLines="1"
                        android:maxLength="6"
                        android:ellipsize="end"
                        android:layout_width="match_parent"
                        android:padding="8dp"
                        android:layout_height="50dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCheckPincode"
                    android:enabled="false"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/check"
                    android:padding="8dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/district"/>
                    <TextView
                        android:id="@+id/tvDistrict"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:layout_marginStart="8dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/state"/>
                    <TextView
                        android:id="@+id/tvstate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:layout_marginStart="8dp"/>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegisterUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginTop="20dp"
                android:text="@string/register"
                android:padding="8dp"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>
</layout>