<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/whetherBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.WhetherActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llShowWhetherView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etCityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:errorEnabled="true"
                    app:endIconMode="clear_text"
                    app:errorTextColor="@color/error"
                    app:startIconDrawable="@drawable/ic_pin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/enter_city_name">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:padding="8dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:maxLength="10"
                        android:layout_height="50dp" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnShowWhether"
                    android:enabled="false"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    app:icon="@drawable/ic_cloud"
                    android:text="@string/show_whether"/>

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:visibility="gone"
                    android:id="@+id/progress_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:trackCornerRadius="10dp"
                    android:indeterminate="true" />
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/llWhetherReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_pin"/>
                    <TextView
                        android:id="@+id/tvCityName"
                        android:layout_marginHorizontal="5dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        tools:text="Faridabad"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnChangeCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_horizontal"
                        app:icon="@drawable/ic_edit"
                        android:text="@string/change"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/ivCurrentWhetherImage"
                    android:layout_width="250dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="15dp"
                    android:layout_gravity="center_horizontal"
                    tools:src="@drawable/ic_cloud_with_sun"/>

                <TextView
                    android:id="@+id/tvAboutWhether"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    tools:text="It's Hot"/>

                <TextView
                    android:id="@+id/tvTempWhether"
                    android:layout_marginVertical="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="48sp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/cardview_dark_background"
                    tools:text="30\u2103  40\u2109"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:src="@drawable/ic_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvWindSpeed"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="2 km/h"/>

                    <ImageView
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_moisture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvHumidity"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="32 %"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:src="@drawable/ic_latitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/latitude"/>
                    <TextView
                        android:id="@+id/tvLatitude"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="28.43"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:src="@drawable/ic_longitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/longitude"/>
                    <TextView
                        android:id="@+id/tvLongitude"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="77.32"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>